# ZhiArchive

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Base.Dockerfile  CN.Dockerfile  Dockerfile  README.md  docker-compose.yaml  docker-compose2.yaml  pull_and_build.sh  pyproject.toml  requirements.txt  seccomp_profile.json
archive/: __init__.py  config.py
archive/api/endpoints/: auth.py
archive/api/endpoints/zhi/: __init__.py  core.py  login.py
archive/api/templates/: config.html  login.html  qrcode.html
archive/core/: archiver.py  base.py  login.py  monitor.py
